--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ p {
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
+    alt: members working at table;
     background-size: cover;
     background-position: center;
 }
