--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,28 @@
-* {
+* /* universal selector for entire document */ {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    padding: 0; /* set the padding to 0 pixels */
+    margin: 0; /* set the margin to 0 pixels */
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: #d9dcd6;  /* background color: white; */
 }
 
-.header {
+/* style rules for header elements */
+.header /* . class selector */ {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; /* preffered fonts list */ 
+    background-color: #2a607c; /* color: blue; */
+    color: #ffffff; /* color: white; */
 }
 
 .header h1 {
-    display: inline-block;
-    font-size: 48px;
+    display: inline-block; /* allows w/h adjustments */
+    font-size: 48px; /* sets font size to 48px */
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #d9dcd6;  /* color: white; */
 }
 
 .header div {
@@ -41,25 +42,28 @@ body {
     margin-left: 25px;
 }
 
+/* style rules for all a tags */
 a {
-    color: #ffffff;
+    color: #ffffff; /* color: white; */
     text-decoration: none;
 }
 
+/* style rules for all p tags */
 p {
     font-size: 16px;
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
+    height: 800px; /* sets img height to 800px */
+    width: 100%; /* sets img width */
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     alt: marketing meeting;
-    background-size: cover;
-    background-position: center;
+    background-size: cover; /* specifies background size to 'cover' */
+    background-position: center; /* specifies background position to 'center' */
 }
 
+/* float class positioning rules */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -70,12 +74,14 @@ p {
     margin-left: 25px;
 }
 
+/* style rules for content classes */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* style rules for benefit section/ classes elements */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -84,27 +90,27 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #2589bd; /* color: blue; */
 }
 
 .benefit-lead {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ffffff; /* color: white; */
 }
 
 .benefit-brand {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ffffff; /* color: white; */
 }
 
 .benefit-cost {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ffffff; /* color: white; */
 }
 
 .benefit-lead h3 {
     margin-bottom: 10px;
-    text-align: center;
+    text-align: center; /* color: white; */
 }
 
 .benefit-brand h3 {
@@ -135,13 +141,14 @@ p {
     max-width: 150px;
 }
 
+/* style rules content elements */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+    background-color: #0072bb; /* color: blue; */
+    color: #ffffff; /* color: white; */
 }
 
 .online-reputation-management {
@@ -149,8 +156,8 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+    background-color: #0072bb; /* color: blue; */
+    color: #ffffff; /* color: white; */
 }
 
 .social-media-marketing {
@@ -158,8 +165,8 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+    background-color: #0072bb; /* color: blue; */
+    color: #ffffff; /* color: white; */
 }
 
 .search-engine-optimization img {
@@ -189,6 +196,7 @@ p {
     font-size: 36px;
 }
 
+/* style rules for footer elements */
 .footer {
     padding: 30px;
     clear: both;
