--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ p {
 }
 
 /* style rules content elements */
-.search-engine-optimization {
+.content-elements {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -151,50 +151,15 @@ p {
     color: #ffffff; /* color: white; */
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb; /* color: blue; */
-    color: #ffffff; /* color: white; */
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb; /* color: blue; */
-    color: #ffffff; /* color: white; */
-}
-
-.search-engine-optimization img {
+.content-imgs img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.side-header h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 /* style rules for footer elements */
 .footer {
