--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,44 +98,12 @@ p {
     color: #ffffff; /* color: white; */
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff; /* color: white; */
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff; /* color: white; */
-}
-
-.benefit-lead h3 {
+.benefit-headers h3 {
     margin-bottom: 10px;
     text-align: center; /* color: white; */
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-img img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
