--- a/devolop/assets/css/style.css
+++ b/devolop/assets/css/style.css
@@ -74,14 +74,33 @@ p {
     margin-left: 25px;
 }
 
-/* style rules for content classes */
-.content {
+/* style rules for contents class */
+.contents {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* style rules for benefit section/ classes elements */
+/* style rules for contents elements */
+.content {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb; /* color: blue; */
+    color: #ffffff; /* color: white; */
+}
+
+.content img {  
+    max-height: 200px;
+}
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* style rules for benefit section/ class elements */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -93,107 +112,20 @@ p {
     background-color: #2589bd; /* color: blue; */
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff; /* color: white; */
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff; /* color: white; */
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff; /* color: white; */
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center; /* color: white; */
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/* style rules content elements */
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb; /* color: blue; */
-    color: #ffffff; /* color: white; */
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb; /* color: blue; */
-    color: #ffffff; /* color: white; */
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb; /* color: blue; */
-    color: #ffffff; /* color: white; */
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 /* style rules for footer elements */
